--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://balldev1:balldev1@bdlldev1.vog9phd.mongodb.net/ot?authSource=admin"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dqse3famh"
+
