--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "next": "14.2.4",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.2",
     "postcss": "^8",
     "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
